--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ beautifulsoup4==4.13.5
 Django==5.2.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+mimesis==18.0.0
 openpyxl==3.1.5
 progress==1.6.1
+python-decouple==3.8
 Requests==2.32.5
