--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "openpyxl (==3.1.5)",
     "progress (==1.6.1)",
     "python-decouple (==3.8)",
-    "requests (==2.32.5)"
+    "requests (==2.32.5)",
+    "lxml (==6.0.2)"
 ]
 
 
