--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-beautifulsoup4==4.13.5
+beautifulsoup4==4.14.0
 Django==5.2.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
@@ -7,3 +7,4 @@ openpyxl==3.1.5
 progress==1.6.1
 python-decouple==3.8
 Requests==2.32.5
+lxml==6.0.2
