--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ python-decouple = "==3.8"
 requests = "==2.32.5"
 lxml = "==6.0.2"
 dotenv = "==0.9.9"
+psycopg2-binary = "==2.9.9"
 
 [dev-packages]
 
